--- a/client/templates/guests/membersGuests.html
+++ b/client/templates/guests/membersGuests.html
@@ -43,7 +43,7 @@
                     <div class="form-group">
                         <input type="password" class="extra-spacing-bottom form-control" id="at-field-password" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block">LOG IN</button>
+                    <button id="logInButton" type="submit" class="btn btn-primary btn-block">LOG IN</button>
                 </form>
 
                 <hr class="layer-light">
@@ -53,24 +53,24 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                        <a class="btn btn-primary btn-block btn-social btn-google">
+                        <a  id="at-google" class="btn btn-primary btn-block btn-social btn-google">
                             <span class="fa fa-google"></span> Google
                         </a>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                        <a class="btn btn-primary btn-block btn-social btn-facebook">
+                        <a id="at-facebook" class="btn btn-primary btn-block btn-social btn-facebook">
                             <span class="fa fa-facebook"></span> Facebook
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                        <a class="btn btn-primary btn-block btn-social btn-twitter">
+                        <a id="at-twitter" class="btn btn-primary btn-block btn-social btn-twitter">
                             <span class="fa fa-twitter"></span> Twitter
                         </a>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                        <a class="btn btn-primary btn-block btn-social btn-linkedin">
+                        <a  id="at-linkedin" class="btn btn-primary btn-block btn-social btn-linkedin">
                             <span class="fa fa-linkedin"></span> LinkedIn
                         </a>
                     </div>
