--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -37,10 +37,9 @@
 										<li class="{{isActiveRoute name='contact'}}">
 												<a href="{{pathFor route='contact'}}">Contact</a>
 										</li>
-
                     {{#unless currentUser}}
 										<form class="navbar-form navbar-right" role="register">
-												<button type="button" class="btn btn-primary btn-login">LOG IN</button>
+												<button type="button" class="js-logIn btn btn-primary btn-login">LOG IN</button>
 										</form>
                     {{else}}
                     <li class="dropdown">
@@ -72,4 +71,53 @@
 						</div> <!-- /.navbar-collapse -->
 				</div> <!-- /.container-fluid -->
 		</nav> <!-- ./Navbar Bootstrap -->
+    {{#if showLoginDiv}}
+      {{> logInWindow}}
+    {{/if}}
+</template>
+
+<template name="logInWindow">
+  <div class="container">
+    <div class="col-lg-4 col-lg-offset-7 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12 layer-background nav-login put-down">
+      <form>
+          <div class="form-group">
+              <input type="email" class="extra-spacing-bottom form-control" id="at-field-email" placeholder="Email">
+          </div>
+          <div class="form-group">
+              <input type="password" class="extra-spacing-bottom form-control" id="at-field-password" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">LOG IN</button>
+      </form>
+
+      <hr class="layer-light">
+
+      <div class="text-center">
+          <p class="text-muted form">Or log in with your social account:</p>
+      </div>
+      <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+              <a  id="at-google" class="btn btn-primary btn-block btn-social btn-google">
+                  <span class="fa fa-google"></span> Google
+              </a>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+              <a id="at-facebook" class="btn btn-primary btn-block btn-social btn-facebook">
+                  <span class="fa fa-facebook"></span> Facebook
+              </a>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+              <a id="at-twitter" class="btn btn-primary btn-block btn-social btn-twitter">
+                  <span class="fa fa-twitter"></span> Twitter
+              </a>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+              <a id="at-linkedin" class="btn btn-primary btn-block btn-social btn-linkedin">
+                  <span class="fa fa-linkedin"></span> LinkedIn
+              </a>
+          </div>
+      </div>
+    </div>
+  </div>
 </template>
