--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -90,7 +90,7 @@
 						</div>
 						{{/if}}
 						
-						<!-- {{#if noPics}} -->
+						{{#if noPicture}}
 						<div class="row">
 								<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
 										<div class="form-group">
@@ -102,7 +102,7 @@
 										</div>
 								</div>
 						</div>
-						<!-- {{/if}} -->
+						{{/if}}
 
 						<div class="row">
 								<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
