--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1472,6 +1472,8 @@ section.layer-login {
 	background-color: rgba(0,0,0,0.6); /*dim the background*/
 }
 
+
+
 @media(min-width:768px) {
 		section.layer-login {
 				padding-top: @spacing;
@@ -1699,4 +1701,14 @@ section.layer-login {
 .bert-alert.osWarning {
   background: @brand-primary;
   color: #fff;
+}
+
+nav-login {
+  position: absolute;
+  top: 40px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  background-color: rgba(0,0,0,0.6); /*dim the background*/
 }
