--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -39,20 +39,8 @@ related news are warmly welcome. In order to add news to this section, please se
 	<section id="News">
 		<div class="container">
 			<!-- ROW -->
-			<div class="row text-left">
-				{{#each newsEventsData}}
-				<div class="col-sm-4">
-					<div class="caption">
-					{{#if imageExists}}
-						<h4>{{title}}<img alt="news thumbnail" class="news-thumbnail" src="{{ coverImage.url }}" /></h4>
-					{{else}}
-						<h4>{{title}}</h4>
-					{{/if}}
-						<p class="text-muted">{{{description}}} <a href="{{pathFor route = 'newsAndEventsPage'}}" class="textlink">read more </a></p>
-					</div>
-				</div>
-				{{/each}}
-			</div> <!-- ROW -->
+                {{> newsblock}}
+            <!-- ROW -->
 
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -63,6 +51,26 @@ related news are warmly welcome. In order to add news to this section, please se
 	</section> <!-- ./News&Events -->
 </template>
 
+<template name="newsblock">
+        {{#each newsEventsData}}
+        <!--if -->
+    
+
+            {{{beginningTag}}}
+                <div class="col-md-4 col-sm-6">
+                <div class="caption">
+                    {{#if imageExists}}
+                        <h4>{{title}}<img alt="news thumbnail" class="news-thumbnail" src="{{ coverImage.url }}" /></h4>
+                    {{else}}
+                        <h4>{{title}}</h4>
+                    {{/if}}
+                        <p class="text-muted">{{{description}}} <a href="{{pathFor route = 'newsAndEventsPage'}}" class="textlink">read more </a></p>
+                </div>
+            </div>
+        {{{closingTag}}}
+
+            {{/each}}
+</template>
 <!-- {{#if imageExists}}
 
 <img alt="news thumbnail" class="news-thumbnail" src="{{#if imageExists}}{{ coverImage.url }}{/if}" />{
