--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -366,11 +366,39 @@ a.active {
         color: white;
 }
 
-.btn-upload {
-		margin-top: -20px;
-		background-color: grey;
-		border-radius: 2px;
-		color: white;
+
+.btn-file-upload {
+    margin-top: -20px;
+    background-color: grey;
+    border-radius: 2px;
+    color: gray-light;
+    padding-top: 10px;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+}
+
+input, textarea, keygen, select, button {
+    text-rendering: auto;
+    color: initial;
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: start;
+    margin: 0em 0em 0em 0em;
+    font: 11px;
+}
+
+input,
+button,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: 0;
 }
 
 .btn-default{
@@ -1611,6 +1639,8 @@ section.layer-login {
 	cursor: pointer;
 	opacity: 0;
 	filter: alpha(opacity=0);
+    width: 100%;
+    height: 100%;
 }
 
 /*social button colours*/
