--- a/client/templates/admin/admin-members.html
+++ b/client/templates/admin/admin-members.html
@@ -4,7 +4,7 @@
       <h1 class="extra-spacing-bottom extra-spacing-top">MEMBER LIST</h1>
       <hr>
       <div class="col-md-6 col-md-offset-3">
-          <!-- <a class="btn btn-primary btn-add" href="{{pathFor route='adminNewsEvents'}}"><i class="fa fa-plus-circle">  Add new entry</i></a> -->
+          <!-- <a class="btn btn-primary btn-add" href="{{pathFor route='adminNewsEvents'}}"><i class="fa fa-plus-circle"></i>Add new entry</a> -->
         {{#each members}}
         <ul class="list-group">
           <li class="list-group-item">
