--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1513,26 +1513,6 @@ section.layer-login {
 
 //Social Buttons
 
-.btn-google {
-		background-color: #dd4b39;
-		border-color: rgba(0,0,0,0.2);
-}
-
-.btn-facebook {
-		background-color: #3b5998;
-		border-color: rgba(0,0,0,0.2);
-}
-
-.btn-twitter {
-		background-color: #55acee;
-		border-color: rgba(0,0,0,0.2);
-}
-
-.btn-linkedin {
-		background-color: #007bb6;
-		border-color: rgba(0,0,0,0.2);
-}
-
 .btn-social>:first-child {
 		position: absolute;
 		left: 0;
@@ -1590,6 +1570,38 @@ section.layer-login {
 		font-size: 1.6em;
 		text-align: center;
 		border-right: 1px solid rgba(0,0,0,0.2);
+}
+
+.btn-google {
+		background-color: #dd4b39;
+		border-color: rgba(0,0,0,0.2);
+}
+
+.btn-dropdown-google {
+		background-color: #dd4b39;
+		border-color: rgba(0,0,0,0.2);
+        margin-bottom: 15px;
+}
+
+.btn-facebook {
+		background-color: #3b5998;
+		border-color: rgba(0,0,0,0.2);
+}
+
+.btn-dropdown-facebook {
+		background-color: #3b5998;
+		border-color: rgba(0,0,0,0.2);
+        margin-bottom: 15px;
+}
+
+.btn-twitter {
+		background-color: #55acee;
+		border-color: rgba(0,0,0,0.2);
+}
+
+.btn-linkedin {
+		background-color: #007bb6;
+		border-color: rgba(0,0,0,0.2);
 }
 
 .btn-add {
@@ -1759,4 +1771,10 @@ nav-login {
   bottom: 0;
   z-index: 10;
   background-color: rgba(0,0,0,0.6); /*dim the background*/
+}
+
+.dropdown-login {
+    width: 300px;
+    margin: 0px;
+    padding: 15px;
 }
