--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -58,8 +58,8 @@
 						<div class="row">
 								<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
 										<div class="form-group">
-												<label for="interests">Interests reg. Open Strategy* <span class="badge grey-tooltip" data-toggle="tooltip" title="Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa." data-placement="bottom" href="#">?</span></label>
-												<input type="interests" class="form-control" value="{{profile.interests}}" id="interests" placeholder="Interests reg. Open Strategy">
+												<label for="interests">Interests regarding Open Strategy* <span class="badge grey-tooltip" data-toggle="tooltip" title="Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa." data-placement="bottom" href="#">?</span></label>
+												<input type="interests" class="form-control" value="{{profile.interests}}" id="interests" placeholder="Interests regarding Open Strategy">
 										</div>
 								</div>
 						</div>
