--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -43,19 +43,19 @@ related news are warmly welcome. In order to add news to this section, please se
       {{> newsblock}}
       </div>
 
-      <!-- ROW -->
-
+      <!-- Just Button ince, not working!!! -->
+      {{#unless clickedAll}}
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<button class="btn btn-primary page-scroll extra-spacing-bottom js-seeMoreNE">SEE MORE</button>
 				</div>
 			</div>
+      {{/unless}}
 		</div>
 	</section> <!-- ./News&Events -->
 </template>
 
 <template name="newsblock">
-  {{breakTimeReset}}
   {{#each newsEventsData}}
     {{> newsrow}}
   {{/each}}
