--- a/client/templates/guests/membersGuests.html
+++ b/client/templates/guests/membersGuests.html
@@ -124,7 +124,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="media-body">
-                            <p class="interests">Interests reg. Open Strategy:</p>
+                            <p class="interests">Interests regarding Open Strategy:</p>
                             <p class="text-muted">Interests regarding Open Strategy 1, Interest 2, Interest 3, Interest 4 or a longer text</p>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="media-body">
-                            <p class="interests">Interests reg. Open Strategy:</p>
+                            <p class="interests">Interests regarding Open Strategy:</p>
                             <p class="text-muted">Interests regarding Open Strategy 1, Interest 2, Interest 3, Interest 4 or a longer text</p>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="media-body">
-                            <p class="interests">Interests reg. Open Strategy:</p>
+                            <p class="interests">Interests regarding Open Strategy:</p>
                             <p class="text-muted">Interests regarding Open Strategy 1, Interest 2, Interest 3, Interest 4 or a longer text</p>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="media-body">
-                            <p class="interests">Interests reg. Open Strategy:</p>
+                            <p class="interests">Interests regarding Open Strategy:</p>
                             <p class="text-muted">Interests regarding Open Strategy 1, Interest 2, Interest 3, Interest 4 or a longer text</p>
                         </div>
                     </div>
