--- a/client/templates/members/membersMembers.html
+++ b/client/templates/members/membersMembers.html
@@ -78,7 +78,7 @@
 						</div>
 						<div class="col-sm-6">
 								<div class="media-body">
-										<p class="interests">Interests reg. Open Strategy:</p>
+										<p class="interests">Interests regarding Open Strategy:</p>
 										<p class="text-muted">{{profile.interests}}</p>
 								</div>
 						</div>
@@ -121,7 +121,7 @@
 								</div>
 								<div class="col-sm-6">
 										<div class="media-body">
-												<p class="interests">Interests reg. Open Strategy:</p>
+												<p class="interests">Interests regarding Open Strategy:</p>
 												<p class="text-muted">{{profile.interests}}</p>
 										</div>
 								</div>
