--- a/client/templates/account-templates/at_form_mod.html
+++ b/client/templates/account-templates/at_form_mod.html
@@ -25,9 +25,9 @@
       {{#if showOauthServices}}
         {{> atOauth}}
       {{/if}}
-      {{#if showSignInLink}}
+      <!-- {{#if showSignInLink}}
         {{> atSigninLink}}
-      {{/if}}
+      {{/if}} -->
     </div> <!-- end main div -->
   {{/unless}}
 </template>
