--- a/client/templates/admin/admin-news-events.html
+++ b/client/templates/admin/admin-news-events.html
@@ -26,6 +26,12 @@
 	            <label class="radio-inline"><input type="radio" name="netype" value="event">Event</label>
 	        </div>
       	</div>
+        <div class="form-group">
+              <label for="courseKeywords" class="col-sm-2 control-label">Keywords</label>
+        <div class="col-sm-10">
+              <input type="select" id="courseKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)">
+        </div>
+        </div>
 			 	<div class="form-group">
 	        <label for="coverImage" class="col-sm-2 control-label">Image</label>
 	        <div class="col-sm-10">
