The social network users update the "Meteor.user().profile.picture" string from the information on login, in the "/profile-settings" template the user can't change the profile picture.
The users who are loged with user/pass can change profile pics.

--- a/client/templates/members/membersMembers.html
+++ b/client/templates/members/membersMembers.html
@@ -52,7 +52,10 @@
 						<div class="col-sm-6">
 								<div class="media-left">
 										{{#if this.profile.pictureID}}
-										<img class="members-thumbnail" src="{{uploadedPic.url}}" alt="Max Mustermann">
+										<img class="members-thumbnail" src="{{profile.pictureID}}" alt="Max Mustermann">
+										{{/if}}
+										{{#if this.profile.picture}}
+										<img class="members-thumbnail" src="{{profile.picture}}" alt="Max Mustermann">
 										{{/if}}
 										{{#if noPicture}}
 										<img class="members-thumbnail" src="img/contact-placeholder.jpg" alt="Max Mustermann">
