--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -130,6 +130,8 @@
 								</div>
 						</div>
 					</form>
+					{{#if profilePic}}
+					{{else}}
 					<div class="row">
 								<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
 										<div class="form-group">
@@ -137,6 +139,7 @@
 										</div>
 								</div>
 					</div>
+					{{/if}}
 					{{/with}}
 			</div>
 	</section> <!-- ./Basics -->
