--- a/client/templates/account-templates/uploadInput.html
+++ b/client/templates/account-templates/uploadInput.html
@@ -7,11 +7,14 @@
     <!-- adding specific cols and form group -->
     <div class="col-sm-6 input-spacing">
         <div class="form-group">
-          <div class="form-group fileUpload btn btn-default btn-block btn-icon btn-file-upload">
+		<div id="hiddenImage" style="display:none;"><img class="image" style="width:150px;height:150px;" src="/"></div>
+         <div id="uploadInput">
+		  <div class="form-group fileUpload btn btn-default btn-block btn-icon btn-file-upload">
               <span class="glyphicon glyphicon-upload"></span> Upload a profile photo
               <input type="file" class="upload js-Profile" placeholder="Upload a Picture"/>
           </div>
           <span class="help-block {{#unless hasError}}hide{{/unless}}">{{errorText}}</span>
+		 </div>
         </div>
     </div>
   </div>
