--- a/client/templates/account-templates/uploadInput.html
+++ b/client/templates/account-templates/uploadInput.html
@@ -7,7 +7,11 @@
     <!-- adding specific cols and form group -->
     <div class="col-sm-6 input-spacing">
         <div class="form-group">
-		<div id="hiddenImage" style="display:none;"><img class="image" style="width:150px;height:150px;" src="/"></div>
+		<div id="hiddenName" style="display:none;">
+		    <div class="form-group fileUpload btn btn-default btn-block btn-icon btn-file-upload">
+            Uploading... <!-- When the user upload a new profile pic, this text appears -->
+            </div>
+		</div>
          <div id="uploadInput">
 		  <div class="form-group fileUpload btn btn-default btn-block btn-icon btn-file-upload">
               <span class="glyphicon glyphicon-upload"></span> Upload a profile photo
@@ -19,3 +23,4 @@
     </div>
   </div>
 </template>
+
