--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -90,20 +90,26 @@
 							    <label for="beispielFeldDatei">Profile picture</label>
 								<br>
 								<!--Upload input as a edit icon-->
-								<div style="margin-left:155px" id="uploadInput">
+								<div style="position:absolute;margin-left:70px" id="uploadInput">
                                           <div class="fileUpload">
-                                            <button class="btn btn-primary"><i class="fa fa-pencil-square-o"></i>
-                                            <input type="file" class="upload js-Profile" /></button>
+                                            <button type="button" class="btn btn-primary"><i class="fa fa-pencil-square-o"></i></button>
+                                            <input type="file" class="upload js-Profile" />
                                           </div>
 								</div>
-								<!--Discard button is a trash icon-->
-								<div id="discardButton" style="display:none;">
-								     <button id="discard" type="click" class="btn btn-primary"><i class="fa fa-trash"></i></button>
+								<!--Discard button is a trash  icon-->
+								<div style="position:absolute;margin-left:112px;" id="discardButton">
+								     <button id="discard" type="button" class="btn btn-primary"><i class="fa fa-trash"></i></button>
 								</div>	
 								<div style="float:left;">
 								<img class="image" style="width:150px;height:150px;" src="{{profile.pictureID}}">
 								</div>
-								<div id="uploadInputFile"></div>	
+								<div style="display:none;" id="uploadInputFile">
+                                          <div class="fileUpload btn btn-default btn-block btn-icon btn-file-upload">
+                                            <span class="glyphicon glyphicon-upload"></span>
+                                            <span>Upload a profile picture</span>
+                                            <input type="file" class="upload js-Profile" />
+                                          </div>
+								</div>	
 							</div>
 						</div>
 						{{/if}}
@@ -114,10 +120,17 @@
 												<label for="beispielFeldDatei">Profile Photo</label>
 										</div>
 										<br>
-							            	<!--Discard button is a trash icon-->
-							            <div id="discardButton" style="display:none;">
-								              <button id="discard" type="click" class="btn btn-primary"><i class="fa fa-trash"></i></button>
+										 <!--Upload input as a edit icon-->
+										<div style="position:absolute;margin-left:70px;display:none;" id="uploadInput">
+                                          <div class="fileUpload">
+                                            <button type="button" class="btn btn-primary"><i class="fa fa-pencil-square-o"></i></button>
+                                            <input type="file" class="upload js-Profile" />
+                                          </div>
 								        </div>
+							            	<!--Discard button is a trash icon-->
+							             <div style="position:absolute;margin-left:112px;display:none;" id="discardButton">
+								            <button id="discard" type="button" class="btn btn-primary"><i class="fa fa-trash"></i></button>
+								         </div>	
 										   <!--The image is hidden in the background-->
 										<div id="hiddenImage" style="display:none;"><img class="image" style="width:150px;height:150px;" src="{{profile.pictureID}}"></div>
 										   <!-- Traditional input manager-->
@@ -128,8 +141,7 @@
                                             <input type="file" class="upload js-Profile" />
                                           </div>
 										</div>
-										   <!-- Bug fixer-->
-										<div id="uploadInput"></div>
+	
 								</div>
 						</div>
 						{{/if}}
