--- a/client/templates/admin/admin-news-events-edit.html
+++ b/client/templates/admin/admin-news-events-edit.html
@@ -22,6 +22,13 @@
 	            	</div>
 		        </div>
 
+            <div class="form-group">
+                  <label for="newsKeywords" class="col-sm-2 control-label">Keywords</label>
+            <div class="col-sm-10">
+                  <input type="select" id="newsKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)">
+            </div>
+            </div>
+
 		        <div class="form-group">
 		            <label for="description" class="col-sm-2 control-label">Type</label>
 		            <div class="col-sm-10">
