--- a/client/templates/admin/admin-news-events.html
+++ b/client/templates/admin/admin-news-events.html
@@ -27,9 +27,9 @@
 	        </div>
       	</div>
         <div class="form-group">
-              <label for="courseKeywords" class="col-sm-2 control-label">Keywords</label>
+              <label for="newsKeywords" class="col-sm-2 control-label">Keywords</label>
         <div class="col-sm-10">
-              <input type="select" id="courseKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)">
+              <input type="select" id="newsKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)">
         </div>
         </div>
 			 	<div class="form-group">
