--- a/client/templates/admin/admin-news-events.html
+++ b/client/templates/admin/admin-news-events.html
@@ -14,8 +14,8 @@
 			 	<div class="form-group">
           <label for="description" class="col-sm-2 control-label">Description</label>
           <div class="col-sm-10">
+            <!-- summernote editor loads here -->
           	<div name="description" id="description">
-          		{{{description}}}
           	</div>
         	</div>
       	</div>
@@ -27,9 +27,16 @@
 	        </div>
       	</div>
         <div class="form-group">
-              <label for="newsKeywords" class="col-sm-2 control-label">Keywords</label>
+            <label for="selectCategory" class="col-sm-2 control-label">Choose a Category</label>
+          <div class="col-sm-10">
+            <select id="selectCategory">
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+            <label for="newsKeywords" class="col-sm-2 control-label">Keywords</label>
         <div class="col-sm-10">
-              <input type="select" id="newsKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)">
+            <input type="select" id="newsKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)">
         </div>
         </div>
 			 	<div class="form-group">
